--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
             id="currency"
             name="currency"
             required
-          >
-            <option value="EUR">Euro</option>
-            <option value="USD">Dolary amerykańskie</option>
-            <option value="CHF">Franki szwajcarskie</option>
-          </select>
+          ></select>
           <button class="btn white" id="btn">Przelicz</button>
         </form>
 
